# smart-airport-os-simulator

./: BUILD_INSTRUCTIONS.md  CMakeLists.txt  README.md  build.bat  build.sh  compile.sh  simple_test
config/: airport_config.json  resources.json  scheduling_weights.json  simulation_params.json
docs/: TECHNICAL_DOCUMENTATION.html
scripts/: generate_metrics.sh  run_simulation.sh
src/: main.cpp
src/airport/: Aircraft.cpp  Aircraft.h  Flight.cpp  Flight.h  Gate.cpp  Gate.h  GateManager.cpp  GateManager.h  Runway.cpp  Runway.h  RunwayManager.cpp  RunwayManager.h  TaxiwayGraph.cpp  TaxiwayGraph.h
src/core/: Dashboard.cpp  Dashboard.h  Event.cpp  Event.h  EventQueue.cpp  EventQueue.h  FlightEvents.cpp  FlightEvents.h  Logger.cpp  Logger.h  SimulationEngine.cpp  SimulationEngine.h  TimeManager.cpp  TimeManager.h
src/crew/: Crew.cpp  Crew.h  CrewManager.cpp  CrewManager.h  FatigueModel.cpp  FatigueModel.h
src/crisis/: CrisisManager.cpp  CrisisManager.h  EmergencyEvent.cpp  EmergencyEvent.h  WeatherEvent.cpp  WeatherEvent.h
src/data/: DataRecord.h  DataStore.cpp  DataStore.h
src/finance/: CostModel.cpp  CostModel.h  RevenueModel.cpp  RevenueModel.h
src/memory/: ClockReplacer.cpp  ClockReplacer.h  CompressionManager.cpp  CompressionManager.h  Page.cpp  Page.h  PageFrame.cpp  PageFrame.h  PageTable.cpp  PageTable.h  Prefetcher.cpp  Prefetcher.h  TLB.cpp  TLB.h  ThrashingDetector.cpp  ThrashingDetector.h  WorkingSetManager.cpp  WorkingSetManager.h
src/passengers/: Baggage.cpp  Baggage.h  BaggageSystem.cpp  BaggageSystem.h  PassengerGroup.cpp  PassengerGroup.h  PassengerPipeline.cpp  PassengerPipeline.h
src/resources/: DeadlockDetector.cpp  DeadlockDetector.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h
src/scheduling/: AgingManager.cpp  AgingManager.h  HMFQQueue.cpp  HMFQQueue.h  LearningEngine.cpp  LearningEngine.h  Operation.cpp  Operation.h  PISCalculator.cpp  PISCalculator.h  PreemptionManager.cpp  PreemptionManager.h  PriorityInheritance.cpp  PriorityInheritance.h  QuantumManager.cpp  QuantumManager.h
src/services/: GroundService.cpp  GroundService.h  ServiceDependencyGraph.cpp  ServiceDependencyGraph.h  ServiceExecutor.cpp  ServiceExecutor.h
tests/: requirements_test.cpp  simple_test.cpp  test_memory.cpp  test_resources.cpp  test_scheduler.cpp  test_simulation.cpp
